<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageUpload"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/image_upload_desc"
        android:src="@drawable/file_upload_image" />

    <TextView
        android:id="@+id/upload_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/upload_description_text"
        android:textSize="24sp"
        android:layout_gravity="center_vertical|center_horizontal" />

    <Button
        android:id="@+id/btn_storage"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/upload_screen_upload"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_return_home"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Upload_screen_go_home"
        android:textSize="20sp" />

</androidx.appcompat.widget.LinearLayoutCompat>