<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"
        tools:context=".UploadCompletedActivity">


        <ImageView
            android:id="@+id/imageUserStats"
            android:src="@drawable/user_statistics_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/image_main_desc"
            tools:srcCompat="@drawable/user_statistics_image" />

        <TextView
            android:id="@+id/text_user_stat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_user_title_text"
            android:layout_marginTop="50dp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_stats_user_stat_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/stats_user_results_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_user_stat_vs_users_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/stats_user_vs_users_title_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text_user_stat_vs_users_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/stats_user_results_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_go_home"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"
            android:text="@string/home_button"
            android:textSize="20sp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
